# Lextract

./: .coverage  .env  .gitattributes  .gitignore  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  PROJECT_TREE.md  README.md  analyze.py  coverage.xml  evaluate.py  export.py  paper.bib  paper.md  pyproject.toml  requirements.txt  run_pipeline.py
.github/workflows/: ci.yml  compile-paper.yml  draft-pdf.yml  test.yml
data/: analysis.json  evaluation_report.json  output.json
debugging/: #_of_unique_cases.py  word-counter.py  word_counter.py
evaluation/: reference.json
scripts/: clean-json.py  clean_json.py  json-merge.py  json_merge.py  scrape-chunks.py  scrape-individual.py  scrape-links.py  scrape-pdf-text.py  scrape_chunks.py  scrape_individual.py  scrape_links.py  scrape_pdf_text.py
tests/: conftest.py  test_analyze.py  test_clean_json.py  test_evaluate.py  test_export.py  test_json_merge.py  test_run_pipeline.py  test_scrape_chunks.py  test_scrape_individual.py  test_scrape_links.py  test_scrape_pdf_text.py  test_unique_cases_counter.py  test_word_counter.py
utils/: unique_cases_counter.py  word_counter.py
